src/main/java/ll/Lime2Parser.java
// $ANTLR 3.4 ll\\Lime2.g 2016-04-20 21:35:41

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class Lime2Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Action", "Assert", "Attribute", "Begin", "Bool", "Booltype", "COMMENT", "Class", "Do", "Else", "End", "ID", "INT", "If", "Inherit", "Initialization", "Inttype", "LETTER", "LINE_COMMENT", "Method", "New", "Null", "Return", "STRING", "Then", "Var", "WS", "When", "While", "'!='", "'('", "')'", "'+'", "','", "'-'", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'int'", "'void'"
    };

    public static final int EOF=-1;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int Action=4;
    public static final int Assert=5;
    public static final int Attribute=6;
    public static final int Begin=7;
    public static final int Bool=8;
    public static final int Booltype=9;
    public static final int COMMENT=10;
    public static final int Class=11;
    public static final int Do=12;
    public static final int Else=13;
    public static final int End=14;
    public static final int ID=15;
    public static final int INT=16;
    public static final int If=17;
    public static final int Inherit=18;
    public static final int Initialization=19;
    public static final int Inttype=20;
    public static final int LETTER=21;
    public static final int LINE_COMMENT=22;
    public static final int Method=23;
    public static final int New=24;
    public static final int Null=25;
    public static final int Return=26;
    public static final int STRING=27;
    public static final int Then=28;
    public static final int Var=29;
    public static final int WS=30;
    public static final int When=31;
    public static final int While=32;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public Lime2Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public Lime2Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return Lime2Parser.tokenNames; }
    public String getGrammarFileName() { return "ll\\Lime2.g"; }


    public static class r_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "r"
    // ll\\Lime2.g:8:1: r : ( class_declaration )+ EOF ;
    public final Lime2Parser.r_return r() throws RecognitionException {
        Lime2Parser.r_return retval = new Lime2Parser.r_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token EOF2=null;
        Lime2Parser.class_declaration_return class_declaration1 =null;


        CTree EOF2_tree=null;

        try {
            // ll\\Lime2.g:9:3: ( ( class_declaration )+ EOF )
            // ll\\Lime2.g:9:5: ( class_declaration )+ EOF
            {
            root_0 = (CTree)adaptor.nil();


            // ll\\Lime2.g:9:5: ( class_declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case Class:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // ll\\Lime2.g:9:5: class_declaration
            	    {
            	    pushFollow(FOLLOW_class_declaration_in_r36);
            	    class_declaration1=class_declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, class_declaration1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_r39); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF2_tree = 
            (CTree)adaptor.create(EOF2)
            ;
            adaptor.addChild(root_0, EOF2_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "r"


    public static class class_declaration_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "class_declaration"
    // ll\\Lime2.g:11:1: class_declaration : Class ID ( attribute | initialization | method | action )* End ;
    public final Lime2Parser.class_declaration_return class_declaration() throws RecognitionException {
        Lime2Parser.class_declaration_return retval = new Lime2Parser.class_declaration_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token Class3=null;
        Token ID4=null;
        Token End9=null;
        Lime2Parser.attribute_return attribute5 =null;

        Lime2Parser.initialization_return initialization6 =null;

        Lime2Parser.method_return method7 =null;

        Lime2Parser.action_return action8 =null;


        CTree Class3_tree=null;
        CTree ID4_tree=null;
        CTree End9_tree=null;

        try {
            // ll\\Lime2.g:12:3: ( Class ID ( attribute | initialization | method | action )* End )
            // ll\\Lime2.g:12:5: Class ID ( attribute | initialization | method | action )* End
            {
            root_0 = (CTree)adaptor.nil();


            Class3=(Token)match(input,Class,FOLLOW_Class_in_class_declaration53); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Class3_tree = 
            (CTree)adaptor.create(Class3)
            ;
            adaptor.addChild(root_0, Class3_tree);
            }

            ID4=(Token)match(input,ID,FOLLOW_ID_in_class_declaration55); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID4_tree = 
            (CTree)adaptor.create(ID4)
            ;
            adaptor.addChild(root_0, ID4_tree);
            }

            // ll\\Lime2.g:12:14: ( attribute | initialization | method | action )*
            loop2:
            do {
                int alt2=5;
                switch ( input.LA(1) ) {
                case Attribute:
                    {
                    alt2=1;
                    }
                    break;
                case Initialization:
                    {
                    alt2=2;
                    }
                    break;
                case Method:
                    {
                    alt2=3;
                    }
                    break;
                case Action:
                    {
                    alt2=4;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // ll\\Lime2.g:12:15: attribute
            	    {
            	    pushFollow(FOLLOW_attribute_in_class_declaration58);
            	    attribute5=attribute();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, attribute5.getTree());

            	    }
            	    break;
            	case 2 :
            	    // ll\\Lime2.g:12:27: initialization
            	    {
            	    pushFollow(FOLLOW_initialization_in_class_declaration62);
            	    initialization6=initialization();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, initialization6.getTree());

            	    }
            	    break;
            	case 3 :
            	    // ll\\Lime2.g:12:44: method
            	    {
            	    pushFollow(FOLLOW_method_in_class_declaration66);
            	    method7=method();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, method7.getTree());

            	    }
            	    break;
            	case 4 :
            	    // ll\\Lime2.g:12:53: action
            	    {
            	    pushFollow(FOLLOW_action_in_class_declaration70);
            	    action8=action();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, action8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            End9=(Token)match(input,End,FOLLOW_End_in_class_declaration75); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            End9_tree = 
            (CTree)adaptor.create(End9)
            ;
            adaptor.addChild(root_0, End9_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "class_declaration"


    public static class attribute_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "attribute"
    // ll\\Lime2.g:14:1: attribute : Attribute varList ;
    public final Lime2Parser.attribute_return attribute() throws RecognitionException {
        Lime2Parser.attribute_return retval = new Lime2Parser.attribute_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token Attribute10=null;
        Lime2Parser.varList_return varList11 =null;


        CTree Attribute10_tree=null;

        try {
            // ll\\Lime2.g:15:3: ( Attribute varList )
            // ll\\Lime2.g:15:5: Attribute varList
            {
            root_0 = (CTree)adaptor.nil();


            Attribute10=(Token)match(input,Attribute,FOLLOW_Attribute_in_attribute88); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Attribute10_tree = 
            (CTree)adaptor.create(Attribute10)
            ;
            adaptor.addChild(root_0, Attribute10_tree);
            }

            pushFollow(FOLLOW_varList_in_attribute90);
            varList11=varList();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, varList11.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "attribute"


    public static class initialization_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "initialization"
    // ll\\Lime2.g:17:1: initialization : Initialization '(' ( varList )? ')' statement ;
    public final Lime2Parser.initialization_return initialization() throws RecognitionException {
        Lime2Parser.initialization_return retval = new Lime2Parser.initialization_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token Initialization12=null;
        Token char_literal13=null;
        Token char_literal15=null;
        Lime2Parser.varList_return varList14 =null;

        Lime2Parser.statement_return statement16 =null;


        CTree Initialization12_tree=null;
        CTree char_literal13_tree=null;
        CTree char_literal15_tree=null;

        try {
            // ll\\Lime2.g:18:3: ( Initialization '(' ( varList )? ')' statement )
            // ll\\Lime2.g:18:5: Initialization '(' ( varList )? ')' statement
            {
            root_0 = (CTree)adaptor.nil();


            Initialization12=(Token)match(input,Initialization,FOLLOW_Initialization_in_initialization103); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Initialization12_tree = 
            (CTree)adaptor.create(Initialization12)
            ;
            adaptor.addChild(root_0, Initialization12_tree);
            }

            char_literal13=(Token)match(input,34,FOLLOW_34_in_initialization105); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal13_tree = 
            (CTree)adaptor.create(char_literal13)
            ;
            adaptor.addChild(root_0, char_literal13_tree);
            }

            // ll\\Lime2.g:18:24: ( varList )?
            int alt3=2;
            switch ( input.LA(1) ) {
                case ID:
                    {
                    alt3=1;
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // ll\\Lime2.g:18:24: varList
                    {
                    pushFollow(FOLLOW_varList_in_initialization107);
                    varList14=varList();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, varList14.getTree());

                    }
                    break;

            }


            char_literal15=(Token)match(input,35,FOLLOW_35_in_initialization110); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal15_tree = 
            (CTree)adaptor.create(char_literal15)
            ;
            adaptor.addChild(root_0, char_literal15_tree);
            }

            pushFollow(FOLLOW_statement_in_initialization112);
            statement16=statement();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, statement16.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "initialization"


    public static class method_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "method"
    // ll\\Lime2.g:20:1: method : Method ID ( '(' varList ')' )? ( ':' typeList )? ( When expression Do )? statement ;
    public final Lime2Parser.method_return method() throws RecognitionException {
        Lime2Parser.method_return retval = new Lime2Parser.method_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token Method17=null;
        Token ID18=null;
        Token char_literal19=null;
        Token char_literal21=null;
        Token char_literal22=null;
        Token When24=null;
        Token Do26=null;
        Lime2Parser.varList_return varList20 =null;

        Lime2Parser.typeList_return typeList23 =null;

        Lime2Parser.expression_return expression25 =null;

        Lime2Parser.statement_return statement27 =null;


        CTree Method17_tree=null;
        CTree ID18_tree=null;
        CTree char_literal19_tree=null;
        CTree char_literal21_tree=null;
        CTree char_literal22_tree=null;
        CTree When24_tree=null;
        CTree Do26_tree=null;

        try {
            // ll\\Lime2.g:21:3: ( Method ID ( '(' varList ')' )? ( ':' typeList )? ( When expression Do )? statement )
            // ll\\Lime2.g:21:5: Method ID ( '(' varList ')' )? ( ':' typeList )? ( When expression Do )? statement
            {
            root_0 = (CTree)adaptor.nil();


            Method17=(Token)match(input,Method,FOLLOW_Method_in_method124); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Method17_tree = 
            (CTree)adaptor.create(Method17)
            ;
            adaptor.addChild(root_0, Method17_tree);
            }

            ID18=(Token)match(input,ID,FOLLOW_ID_in_method126); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID18_tree = 
            (CTree)adaptor.create(ID18)
            ;
            adaptor.addChild(root_0, ID18_tree);
            }

            // ll\\Lime2.g:21:15: ( '(' varList ')' )?
            int alt4=2;
            switch ( input.LA(1) ) {
                case 34:
                    {
                    switch ( input.LA(2) ) {
                        case ID:
                            {
                            switch ( input.LA(3) ) {
                                case 37:
                                case 39:
                                    {
                                    alt4=1;
                                    }
                                    break;
                            }

                            }
                            break;
                    }

                    }
                    break;
            }

            switch (alt4) {
                case 1 :
                    // ll\\Lime2.g:21:16: '(' varList ')'
                    {
                    char_literal19=(Token)match(input,34,FOLLOW_34_in_method129); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal19_tree = 
                    (CTree)adaptor.create(char_literal19)
                    ;
                    adaptor.addChild(root_0, char_literal19_tree);
                    }

                    pushFollow(FOLLOW_varList_in_method130);
                    varList20=varList();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, varList20.getTree());

                    char_literal21=(Token)match(input,35,FOLLOW_35_in_method132); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal21_tree = 
                    (CTree)adaptor.create(char_literal21)
                    ;
                    adaptor.addChild(root_0, char_literal21_tree);
                    }

                    }
                    break;

            }


            // ll\\Lime2.g:21:33: ( ':' typeList )?
            int alt5=2;
            switch ( input.LA(1) ) {
                case 39:
                    {
                    alt5=1;
                    }
                    break;
            }

            switch (alt5) {
                case 1 :
                    // ll\\Lime2.g:21:34: ':' typeList
                    {
                    char_literal22=(Token)match(input,39,FOLLOW_39_in_method137); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal22_tree = 
                    (CTree)adaptor.create(char_literal22)
                    ;
                    adaptor.addChild(root_0, char_literal22_tree);
                    }

                    pushFollow(FOLLOW_typeList_in_method139);
                    typeList23=typeList();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, typeList23.getTree());

                    }
                    break;

            }


            // ll\\Lime2.g:21:49: ( When expression Do )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case When:
                    {
                    alt6=1;
                    }
                    break;
            }

            switch (alt6) {
                case 1 :
                    // ll\\Lime2.g:21:50: When expression Do
                    {
                    When24=(Token)match(input,When,FOLLOW_When_in_method144); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    When24_tree = 
                    (CTree)adaptor.create(When24)
                    ;
                    adaptor.addChild(root_0, When24_tree);
                    }

                    pushFollow(FOLLOW_expression_in_method146);
                    expression25=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression25.getTree());

                    Do26=(Token)match(input,Do,FOLLOW_Do_in_method148); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    Do26_tree = 
                    (CTree)adaptor.create(Do26)
                    ;
                    adaptor.addChild(root_0, Do26_tree);
                    }

                    }
                    break;

            }


            pushFollow(FOLLOW_statement_in_method152);
            statement27=statement();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, statement27.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "method"


    public static class action_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "action"
    // ll\\Lime2.g:23:1: action : Action ID ( When expression Do )? statement ;
    public final Lime2Parser.action_return action() throws RecognitionException {
        Lime2Parser.action_return retval = new Lime2Parser.action_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token Action28=null;
        Token ID29=null;
        Token When30=null;
        Token Do32=null;
        Lime2Parser.expression_return expression31 =null;

        Lime2Parser.statement_return statement33 =null;


        CTree Action28_tree=null;
        CTree ID29_tree=null;
        CTree When30_tree=null;
        CTree Do32_tree=null;

        try {
            // ll\\Lime2.g:24:3: ( Action ID ( When expression Do )? statement )
            // ll\\Lime2.g:24:5: Action ID ( When expression Do )? statement
            {
            root_0 = (CTree)adaptor.nil();


            Action28=(Token)match(input,Action,FOLLOW_Action_in_action164); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Action28_tree = 
            (CTree)adaptor.create(Action28)
            ;
            adaptor.addChild(root_0, Action28_tree);
            }

            ID29=(Token)match(input,ID,FOLLOW_ID_in_action166); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID29_tree = 
            (CTree)adaptor.create(ID29)
            ;
            adaptor.addChild(root_0, ID29_tree);
            }

            // ll\\Lime2.g:24:15: ( When expression Do )?
            int alt7=2;
            switch ( input.LA(1) ) {
                case When:
                    {
                    alt7=1;
                    }
                    break;
            }

            switch (alt7) {
                case 1 :
                    // ll\\Lime2.g:24:16: When expression Do
                    {
                    When30=(Token)match(input,When,FOLLOW_When_in_action169); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    When30_tree = 
                    (CTree)adaptor.create(When30)
                    ;
                    adaptor.addChild(root_0, When30_tree);
                    }

                    pushFollow(FOLLOW_expression_in_action171);
                    expression31=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression31.getTree());

                    Do32=(Token)match(input,Do,FOLLOW_Do_in_action173); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    Do32_tree = 
                    (CTree)adaptor.create(Do32)
                    ;
                    adaptor.addChild(root_0, Do32_tree);
                    }

                    }
                    break;

            }


            pushFollow(FOLLOW_statement_in_action177);
            statement33=statement();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, statement33.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "action"


    public static class statement_return extends ParserRuleReturnScope {
        CTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // ll\\Lime2.g:26:1: statement options {backtrack=true; } : ( compound_statement | assignment_expression | postfix_expression | Return expressionRoot | If expressionRoot Then s1= statement Else s2= statement | While expressionRoot Do statement );
    public final Lime2Parser.statement_return statement() throws RecognitionException {
        Lime2Parser.statement_return retval = new Lime2Parser.statement_return();
        retval.start = input.LT(1);


        CTree root_0 = null;

        Token Return37=null;
        Token If39=null;
        Token Then41=null;
        Token Else42=null;
        Token While43=null;
        Token Do45=null;
        Lime2Parser.statement_return s1 =null;

        Lime2Parser.statement_return s2 =null;

        Lime2Parser.compound_statement_return compound_statement34 =null;

        Lime2Parser.assignment_expression_return assignment_expression35 =null;

        Lime2Parser.postfix_expression_return postfix_expression36 =null;

        Lime2Parser.expressionRoot_return expressionRoot38 =null;

        Lime2Parser.expressionRoot_return expressionRoot40 =null;

        Lime2Parser.expressionRoot_return expressionRoot44 =null;

        Lime2Parser.statement_return statement46 =null;


        CTree Return37_tree=null;
        CTree If39_tree=null;
        CTree Then41_tree=null;
        CTree Else42_tree=null;
        CTree While43_tree=null;
        CTree Do45_tree=null;

        try {
            // ll\\Lime2.g:27:3: ( compound_statement | assignment_expression | postfix_expression | Return expressionRoot | If expressionRoot Then s1= statement Else s2= statement | While expressionRoot Do statement )
            int alt8=6;
            switch ( input.LA(1) ) {
            case Begin:
                {
                alt8=1;
                }
                break;
            case ID:
                {
                int LA8_2 = input.LA(2);

                if ( (synpred2_Lime2()) ) {
                    alt8=2;
                }
                else if ( (synpred3_Lime2()) ) {
                    alt8=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 2, input);

                    throw nvae;

                }
                }
                break;
            case INT:
                {
                int LA8_3 = input.LA(2);

                if ( (synpred2_Lime2()) ) {
                    alt8=2;
                }
                else if ( (synpred3_Lime2()) ) {
                    alt8=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 3, input);

                    throw nvae;

                }
                }
                break;
            case 34:
                {
                int LA8_4 = input.LA(2);

                if ( (synpred2_Lime2()) ) {
                    alt8=2;
                }
                else if ( (synpred3_Lime2()) ) {
                    alt8=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 4, input);

                    throw nvae;

                }
                }
                break;
            case Return:
                {
                alt8=4;
                }
                break;
            case If:
                {
                alt8=5;
                }
                break;
            case While:
                {
                alt8=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // ll\\Lime2.g:27:4: compound_statement
                    {
                    root_0 = (CTree)adaptor.nil();


                    pushFollow(FOLLOW_compound_statement_in_statement197);
                    compound_statement34=compound_statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, compound_statement34.getTree());

                    }
                    break;
                case 2 :
                    // ll\\Lime2.g:28:4: assignment_expression
                    {
                    root_0 = (CTree)adaptor.nil();


                    pushFollow(FOLLOW_assignment_expression_in_statement202);
                    assignment_expression35=assignment_expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment_expression35.getTree());

                    }
                    break;
                case 3 :
                    // ll\\Lime2.g:29:4: postfix_expression
                    {
                    root_0 = (CTree)adaptor.nil();


                    pushFollow(FOLLOW_postfix_expression_in_statement207);
                    postfix_expression36=postfix_expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, postfix_expression36.getTree());

                    }
                    break;
                case 4 :
                    // ll\\Lime2.g:30:4: Return expressionRoot
                    {
                    root_0 = (CTree)adaptor.nil();


                    Return37=(Token)match(input,Return,FOLLOW_Return_in_statement212); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    Return37_tree = 
                    (CTree)adaptor.create(Return37)
                    ;
                    adaptor.addChild(root_0, Return37_tree);
                    }

                    pushFollow(FOLLOW_expressionRoot_in_statement214);
                    expressionRoot38=expressionRoot();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expressionRoot38.getTree());

                    }
                    break;
                case 5 :
                    // ll\\Lime2.g:31:4: If expressionRoot Then s1= statement Else s2= statement
                    {
                    root_0 = (CTree)adaptor.nil();


                    If39=(Token)match(input,If,FOLLOW_If_in_statement221); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    If39_tree = 
                    (CTree)adaptor.create(If39)
                    ;
                    adaptor.addChild(root_0, If39_tree);
                    }

                    pushFollow(FOLLOW_expressionRoot_in_statement223);
                    expressionRoot40=expressionRoot();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expressionRoot40.getTree());

                    Then41=(Token)match(input,Then,FOLLOW_Then_in_statement225); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    Then41_tree = 
                    (CTree)adaptor.create(Then41)
                    ;
                    adaptor.addChild(root_0, Then41_tree);
                    }

                    pushFollow(FOLLOW_statement_in_statement229);
                    s1=statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, s1.getTree());

                    Else42=(Token)match(input,Else,FOLLOW_Else_in_statement231); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    Else42_tree = 
                    (CTree)adaptor.create(Else42)
                    ;
                    adaptor.addChild(root_0, Else42_tree);
                    }

                    pushFollow(FOLLOW_statement_in_statement235);
                    s2=statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, s2.getTree());
